[package]
name = "rust_bundler_cp"
version = "0.2.5"
authors = ["Zhenbo Li <lizhenbo@yahoo.com>"]
description = "Creates a single-source-file version of a Cargo package. This single file can be submitted for competitive programming then. Concentrating on codeforces.com now."
documentation = "https://github.com/Endle/rust-bundler-cp/blob/codeforce/README.mdr"
homepage = "https://github.com/Endle/rust-bundler-cp"
repository = "https://github.com/Endle/rust-bundler-cp"
keywords = ["single-file", "bundle", "merge", "expand", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "rust_bundler_cp"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.12.1"
syn = { version = "1.0.73", features = ["full", "printing", "visit-mut"] }
rustfmt-nightly = { version = "1.4.21", optional = true }
clap = {version = "2.33.3", features = ["yaml"]}

[dev-dependencies]
goldenfile = "1.1.0"
assert_cli = "0.6.3"

[features]
inner_rustfmt = ["rustfmt-nightly"]
