[package]
name = "rust_bundler_cp"
version = "0.3.19"
authors = ["Zhenbo Li <lizhenbo@yahoo.com>"]
description = "Creates a single-source-file version of a Cargo package. This single file can be submitted for competitive programming then. Concentrating on codeforces.com now."
documentation = "https://github.com/Endle/rust-bundler-cp/blob/codeforce/README.mdr"
homepage = "https://github.com/Endle/rust-bundler-cp"
repository = "https://github.com/Endle/rust-bundler-cp"
keywords = ["single-file", "bundle", "merge", "expand", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "rust_bundler_cp"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.19.2"
syn = { version = "1.0.97", features = ["full", "parsing", "printing", "visit-mut"] }
rustfmt-nightly = { version = "1.4.21", optional = true }
simple-string-builder = "0.2.0"
env_logger = "0.9.0"
log = "0.4.0"
clap = "2.33"

[dev-dependencies]
goldenfile = "1.3.0"
assert_cli = "0.6.3"

[features]
inner_rustfmt = ["rustfmt-nightly"]
